convert style1 class tables to form-horizontal class layout Issue: #3139

--- a/vmdb/app/assets/stylesheets/patternfly_overrides.scss
+++ b/vmdb/app/assets/stylesheets/patternfly_overrides.scss
@@ -227,9 +227,28 @@ table.table.table-selectable tbody tr.selected td {
   cursor: hand;
 }
 
+
 /* same for other tables than originally style3 */
 .pointer:hover {
   cursor: pointer;
+}
+
+/* static class form-horizontal for displaying static info with reduced row height */
+
+.form-horizontal.static .form-group {
+  min-height: 28px;
+  margin-bottom: 5px;
+}
+
+/* Ensure .form-control-static doesn't change height when it's empty - Bootstrap fix #15699 */
+
+.form-control-static {
+  min-height: ($line-height-computed + $font-size-small - 20);
+}
+
+.form-control-static img {
+  width: 20px;
+  height: 20px;
 }
 
 /* prevents empty dd from collapsing */
